infrastructure/brennoflavio/influx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb
  namespace: influx
spec:
  selector:
    app: influxdb
  ports:
    - name: http
      protocol: TCP
      port: 8086
      targetPort: http
