infrastructure/brennoflavio/influx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: influxdb
  namespace: influx
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt-dns01
spec:
  ingressClassName: internal-nginx
  tls:
    - hosts:
        - influx.home.brennoflavio.com.br
      secretName: influxdb-tls
  rules:
    - host: influx.home.brennoflavio.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: influxdb
                port:
                  number: 8086
